# melon_benchmark

./: .gitignore  .gitmodules  1_melon_output  CMakeLists.txt  CMakeUserPresets.json  Makefile  README.md  begin-1_melon_output  conanfile.txt  it_melon_output  lemon_output  log.txt  melon_output  perf.data  perf.data.old
benchmarks/AMD_Ryzen_5_3600_6-Core_Processor/bfs/snap/: bgl_adjacency_list_vecS.csv  bgl_compressed_sparse_row.csv  lemon_StaticDigraph.csv  melon_static_digraph.csv
benchmarks/AMD_Ryzen_5_3600_6-Core_Processor/dfs/snap/: bgl_adjacency_list_vecS.csv  bgl_compressed_sparse_row.csv  lemon_StaticDigraph.csv  melon_static_digraph.csv
benchmarks/AMD_Ryzen_5_3600_6-Core_Processor/dijkstra/dimacs/: bgl_adjacency_list_vecS.csv  bgl_compressed_sparse_row.csv  lemon_StaticDigraph.csv  melon_static_digraph.csv  melon_static_forward_weighted_digraph.csv
benchmarks/AMD_Ryzen_5_3600_6-Core_Processor/dijkstra/snap/: bgl_adjacency_list_vecS.csv  bgl_compressed_sparse_row.csv  lemon_StaticDigraph.csv  melon_static_digraph.csv  melon_static_forward_weighted_digraph.csv
benchmarks/AMD_Ryzen_5_3600_6_Core_Processor/bfs/snap/: bgl_adjacency_list_vecS.csv  bgl_compressed_sparse_row.csv  lemon_StaticDigraph.csv  melon_static_digraph.csv
benchmarks/AMD_Ryzen_5_3600_6_Core_Processor/dfs/snap/: bgl_adjacency_list_vecS.csv  bgl_compressed_sparse_row.csv  lemon_StaticDigraph.csv  melon_static_digraph.csv
benchmarks/AMD_Ryzen_5_3600_6_Core_Processor/dijkstra/dimacs/: bgl_compressed_sparse_row.csv  lemon_StaticDigraph.csv  lemon_StaticDigraph_4_heap.csv  lemon_StaticDigraph_8_heap.csv  melon_static_digraph.csv  melon_static_digraph_16_heap.csv  melon_static_digraph_4_heap.csv  melon_static_digraph_8_heap.csv  melon_static_forward_weighted_digraph.csv
benchmarks/AMD_Ryzen_5_3600_6_Core_Processor/dijkstra/snap/: bgl_compressed_sparse_row.csv  melon_static_digraph.csv
benchmarks/AMD_Ryzen_5_3600_6_Core_Processor/edmonds-karp/BVZtsukuba/: lemon_StaticDigraph.csv  melon_static_digraph.csv
benchmarks/AMD_Ryzen_9_7950X_16-Core_Processor/bfs/snap/: bgl_compressed_sparse_row.csv  melon_static_digraph.csv
benchmarks/AMD_Ryzen_9_7950X_16-Core_Processor/dfs/snap/: bgl_compressed_sparse_row.csv  lemon_StaticDigraph.csv  melon_static_digraph.csv
benchmarks/AMD_Ryzen_9_7950X_16-Core_Processor/dijkstra/dimacs/: bgl_adjacency_list_vecS.csv  bgl_compressed_sparse_row.csv  lemon_StaticDigraph.csv  melon_static_digraph.csv
benchmarks/AMD_Ryzen_9_7950X_16-Core_Processor/dijkstra/snap/: bgl_adjacency_list_vecS.csv  bgl_compressed_sparse_row.csv  lemon_StaticDigraph.csv  melon_static_digraph.csv
benchmarks/AMD_Ryzen_9_7950X_16_Core_Processor/bfs/snap/: bgl_adjacency_list_vecS.csv  bgl_compressed_sparse_row.csv  lemon_StaticDigraph.csv  melon_static_digraph.csv
benchmarks/AMD_Ryzen_9_7950X_16_Core_Processor/dfs/snap/: bgl_adjacency_list_vecS.csv  bgl_compressed_sparse_row.csv  lemon_StaticDigraph.csv  melon_static_digraph.csv
benchmarks/AMD_Ryzen_9_7950X_16_Core_Processor/dijkstra/dimacs/: bgl_adjacency_list_vecS.csv  bgl_compressed_sparse_row.csv  lemon_StaticDigraph.csv  lemon_StaticDigraph_4_heap.csv  lemon_StaticDigraph_8_heap.csv  melon_static_digraph.csv  melon_static_digraph_12_heap.csv  melon_static_digraph_16_heap.csv  melon_static_digraph_4_heap.csv  melon_static_digraph_8_heap.csv  melon_static_forward_weighted_digraph.csv
benchmarks/AMD_Ryzen_9_7950X_16_Core_Processor/dijkstra/snap/: melon_static_digraph.csv
benchmarks/AMD_Ryzen_9_7950X_16_Core_Processor/edmonds-karp/BVZtsukuba/: lemon_StaticDigraph.csv  melon_static_digraph.csv
benchmarks/AMD_Ryzen_9_7950X_16_Core_Processor_g++-12/bfs/snap/: bgl_adjacency_list_vecS.csv  bgl_compressed_sparse_row.csv  lemon_StaticDigraph.csv  melon_static_digraph.csv
benchmarks/AMD_Ryzen_9_7950X_16_Core_Processor_g++-12/dfs/snap/: bgl_adjacency_list_vecS.csv  bgl_compressed_sparse_row.csv  lemon_StaticDigraph.csv  melon_static_digraph.csv
benchmarks/AMD_Ryzen_9_7950X_16_Core_Processor_g++-12/dijkstra/dimacs/: bgl_compressed_sparse_row.csv  lemon_StaticDigraph.csv  lemon_StaticDigraph_4_heap.csv  lemon_StaticDigraph_8_heap.csv  melon_static_digraph.csv  melon_static_digraph_16_heap.csv  (+2 more)
cmake/: Conan.cmake  FindLEMON.cmake
data/BVZ-tsukuba/: BVZ-tsukuba1.sol  BVZ-tsukuba10.sol  BVZ-tsukuba11.sol  BVZ-tsukuba12.sol  BVZ-tsukuba13.sol  BVZ-tsukuba14.sol  BVZ-tsukuba15.sol  BVZ-tsukuba2.sol  BVZ-tsukuba3.sol  BVZ-tsukuba4.sol  BVZ-tsukuba5.sol  BVZ-tsukuba6.sol  BVZ-tsukuba7.sol  BVZ-tsukuba8.sol  BVZ-tsukuba9.sol
include/: bgl_read_dimacs_max_flow.hpp  melon.hpp  melon_1-index.hpp  melon_bytes.hpp  melon_parsers.hpp  warm_up.hpp
plot_scripts/: execution_times.py
results/: bgl.csv  bgl_csr.csv  lemon.csv  melon.csv  plot.py  results.csv
results/bfs/snap/: bgl_adjacency_list_vecS.csv  bgl_compressed_sparse_row.csv  lemon_static_digraph.csv  lemon_static_graph.csv  melon_static_digraph.csv  melon_static_graph.csv  plot.py
results/dfs/snap/: bgl_adjacency_list_vecS.csv  bgl_compressed_sparse_row.csv  lemon_static_digraph.csv  lemon_static_graph.csv  melon_static_digraph.csv  melon_static_graph.csv  plot.py
results/dijkstra/: bgl.csv  bgl_csr.csv  lemon_static_graph.csv  melon_static_graph.csv  plot.py
results/dijkstra/dimacs/: bgl_adjacency_list_vecS.csv  bgl_compressed_sparse_row.csv  lemon_static_digraph.csv  lemon_static_graph.csv  melon_static_digraph.csv  melon_static_graph.csv  plot.py
results/dijkstra/snap/: bgl_adjacency_list_vecS.csv  bgl_compressed_sparse_row.csv  lemon_static_digraph.csv  lemon_static_graph.csv  melon_static_digraph.csv  melon_static_graph.csv  plot.py
src/: benchmark_bgl.cpp  benchmark_bgl_csr.cpp  benchmark_lemon.cpp  benchmark_melon.cpp  bgl_benchmark.cpp  correctness_bgl.cpp  correctness_lemon.cpp  lemon_benchmark.cpp  melon_benchmark.cpp
src/dijkstra/benchmark/: bgl_adjacency_list_vecS.cpp  bgl_compressed_sparse_row.cpp  lemon_static_graph.cpp  melon_static_graph.cpp
src/dijkstra/tests/: bgl.cpp  lemon.cpp  melon.cpp
src/tests/dijkstra/: lemon.cpp  melon.cpp
(+228 files in other folders)
